--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="app_error_unmuting_hashtag">Unable to unmute hashtag. Please try again.</string>
     <string name="app_error_unmuting_word">Unable to unmute word. Please try again.</string>
     <string name="app_error_network">Unable to complete the action. Please check your connection and try again.</string>
+    <string name="app_error_upload_failed">Unable to upload file. Please check your connection and try again.</string>
     <string name="app_invalid_lud16_address">Invalid lightning (lud16) address.</string>
     <string name="app_invalid_lud16_address_user_not_found">Invalid lightning address. User \'%1$s\' doesn\'t exist on %2$s.</string>
     <string name="app_invalid_nip05_address">Invalid nostr verification address.</string>
