--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -829,6 +829,7 @@
     <string name="settings_notifications_group_preferences_hell_thread">Ignore notes with more than 10 user mentions</string>
     <string name="settings_notifications_group_preferences_DMS_from_follows">Only show DM notifications from users I follow</string>
     <string name="settings_notifications_group_preferences_reactions_from_follows">Only show reactions from users I follow</string>
+    <string name="settings_notifications_group_preferences_show_notifications_above">Only show notifications above</string>
     <string name="settings_notifications_enable_push_notifications">Enable Push Notifications</string>
     <string name="settings_notifications_enable_push_notifications_description">Get system notifications from Primal. You can also configure this in your system settings.</string>
     <string name="settings_notifications_channel_name_all_app_events">Primal app notifications</string>
