--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -964,9 +964,9 @@
     <string name="profile_followers_no_content">Your profile followers will appear here.</string>
     <string name="profile_following_no_content">Your profile following will appear here.</string>
 
-    <string name="context_menu_mute_user">Mute user</string>
-    <string name="context_menu_unmute_user">Unmute user</string>
-    <string name="context_menu_report_user">Report user</string>
+    <string name="context_menu_mute_user">Mute User</string>
+    <string name="context_menu_unmute_user">Unmute User</string>
+    <string name="context_menu_report_user">Report User</string>
     <string name="context_menu_report_content">Report Content</string>
 
     <string name="context_confirm_bookmark_title">Saving first bookmark</string>
@@ -1198,20 +1198,20 @@
         <item quantity="other">%1$s comments</item>
     </plurals>
 
-    <string name="article_feed_context_share_article">Share article</string>
+    <string name="article_feed_context_share_article">Share Article</string>
     <string name="article_feed_context_hide_highglights">Hide Highlights</string>
     <string name="article_feed_context_show_highglights">Show Highlights</string>
-    <string name="article_feed_context_copy_article_link">Copy article link</string>
-    <string name="article_feed_context_add_to_bookmark">Add to Bookmarks</string>
+    <string name="article_feed_context_copy_article_link">Copy Article Link</string>
+    <string name="article_feed_context_add_to_bookmark">Add Bookmark</string>
     <string name="article_feed_context_bookmark_added">Article added to your bookmarks.</string>
-    <string name="article_feed_context_remove_from_bookmark">Remove from Bookmarks</string>
+    <string name="article_feed_context_remove_from_bookmark">Remove Bookmark</string>
     <string name="article_feed_context_bookmark_removed">Article removed from your bookmarks.</string>
-    <string name="article_feed_context_copy_article_text">Copy article text</string>
-    <string name="article_feed_context_copy_article_id">Copy article ID</string>
-    <string name="article_feed_context_copy_raw_data">Copy raw data</string>
-    <string name="article_feed_context_copy_user_id">Copy user id</string>
-    <string name="article_feed_context_report_user">Report user</string>
-    <string name="article_feed_context_mute_user">Mute user</string>
+    <string name="article_feed_context_copy_article_text">Copy Article Text</string>
+    <string name="article_feed_context_copy_article_id">Copy Article ID</string>
+    <string name="article_feed_context_copy_user_id">Copy User ID</string>
+    <string name="article_feed_context_copy_raw_data">Copy Raw Data</string>
+    <string name="article_feed_context_report_user">Report User</string>
+    <string name="article_feed_context_mute_user">Mute User</string>
     <string name="article_feed_context_request_delete">Request Delete</string>
     <string name="article_feed_context_copied_toast">Copied!</string>
 
