--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -554,6 +554,7 @@
     <string name="thread_stats_zaps">Zaps</string>
     <string name="thread_stats_likes">Likes</string>
     <string name="thread_stats_reposts">Reposts</string>
+    <string name="thread_invalid_thread_id">We couldn’t locate this thread. Please confirm the details and try again.</string>
 
     <string name="reactions_title">Reactions</string>
     <string name="reactions_zaps_tab">Zaps</string>
