--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="app_error_restore_default_blossom_server">Unable to restore default blossom server. Please try again.</string>
     <string name="app_error_unable_to_update_blossom_server_list">Unable to update blossom server list. Please try again.</string>
     <string name="app_error_fetching_mute_list">Failed to load your mute list. Please check your connection and try again.</string>
+    <string name="app_error_invalid_promo_code">Sorry, we couldn’t find a match for that promo code. Please check the spelling and try again.</string>
 
     <string name="welcome_sign_in_button_title">Sign In</string>
     <string name="welcome_create_account_button_title">Create Account</string>
@@ -97,6 +98,24 @@
     <string name="login_button_paste_new_key">Paste New Key</string>
     <string name="login_enter_nsec_key">Enter your Nostr key to sign in:</string>
     <string name="login_invalid_nsec_key">Please enter a valid Nostr key,\nstarting with “nsec”:</string>
+
+    <string name="redeem_code_title">Enter Your Code</string>
+    <string name="redeem_code_success_title">Success!</string>
+    <string name="redeem_code_apply_code_button">Apply code</string>
+    <string name="redeem_code_onboard_to_primal_button">Onboard to Primal</string>
+    <string name="redeem_code_active_wallet_button">Activate Wallet</string>
+    <string name="redeem_code_enter_code_description">If you have an Invite Code, or a\nPrimal Gift Card, you can redeem it here.</string>
+    <string name="redeem_code_incorrect_code_message">Incorrect code. Please try again.</string>
+    <string name="redeem_code_this_code_is_loaded">This code is loaded with:</string>
+    <string name="redeem_code_get_zapping">Get Zapping!</string>
+    <string name="redeem_code_sats">sats</string>
+    <string name="redeem_code_primal_premium">Primal Premium</string>
+    <plurals name="redeem_code_premium_months">
+        <item quantity="one">%1$s month</item>
+        <item quantity="other">%1$s months</item>
+    </plurals>
+    <string name="redeem_code_to_redeem_code_notice">To redeem your code, onboard to Primal by\ncreating your Nostr account and activating\nyour Primal Wallet.</string>
+    <string name="redeem_code_no_wallet_notice">To redeem your code,\nactivate your Primal Wallet.</string>
 
     <string name="logout_title">Sign out</string>
     <string name="logout_description">If you didn\'t save your private key, it will be irretrievably lost. Do you really want to sign out?</string>
