--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,7 +102,8 @@
     <string name="login_enter_nsec_key">Enter your Nostr key to sign in:</string>
     <string name="login_invalid_nsec_key">Please enter a valid Nostr key,\nstarting with “nsec”:</string>
 
-    <string name="redeem_code_title">Enter Your Code</string>
+    <string name="redeem_code_title">Redeem Code</string>
+    <string name="redeem_code_manual_entry_title">Enter Your Code</string>
     <string name="redeem_code_success_title">Success!</string>
     <string name="redeem_code_apply_code_button">Apply code</string>
     <string name="redeem_code_onboard_to_primal_button">Onboard to Primal</string>
