--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -798,7 +798,7 @@
     <string name="settings_wallet_nwc_external_app">External App</string>
     <string name="settings_wallet_nwc_header_connected">Wallet Connected</string>
     <string name="settings_wallet_nwc_connect_alby_wallet">Connect Alby Wallet</string>
-    <string name="settings_wallet_nwc_connect_other_wallet">Connect Other Wallet</string>
+    <string name="settings_wallet_nwc_scan_qr_code">Scan NWC QR Code</string>
     <string name="settings_wallet_nwc_disconnect_wallet_button">Disconnect Wallet</string>
     <string name="settings_wallet_nwc_profile_lightning_address">Your Nostr Lightning Address:</string>
     <string name="settings_wallet_nwc_profile_lightning_address_hint">You can change your Nostr Lightning Address (for receiving zaps) in your</string>
